2008-05-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile.proto (test): added "make test"

	* Makefile-tests.sh: added, needs file "Tests"

	* ex.h (tino_verror_ext): forgot output of ": " sequence

2008-05-15  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* make test now successful again

	* Makefile-test.sh (CFLAGS): -I- is deprecated, now uses -iquote

	* sockbuf.h (tino_sockbuf_newOn): memory leak resolved

2008-05-14  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* ex.h (tino_verror_ext): added to be able to augment the prefix

2008-05-07  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* err.h: TINO_ERR macro now works for GCC past 3.3 as expected

	* main_getini.h (tino_main_if): Case of "no arg functions" added,
	in this case there is a NULL call to the main.

2008-05-04  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* alloc.h: added nameing convention

2008-01-18  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile-diet.sh (TINODIETCC): added -Os to get smallest build
	on "make static"

2008-01-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* C++ specific changes for cleaner compile, many datatypes
	promoted from signed to unsigned etc.

	* Makefile.proto: C++ function warning removed

2007-12-31  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_adrnameN, tino_sock_get_peernameN) 
	(tino_sock_get_socknameN): renamed from ...E to ...N

	* sock_tool.h (tino_sock_unix_kill_ifO): added

	* file.h (tino_file_unlinkO): added (has no sideffect on errno)

2007-12-30  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* html_entities.h: &and; corrected, placed under the CLL

	* getopt.h (main): better commented

2007-12-22  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* log.h: works again for filename '-'

2007-10-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_parse): removed PLUS_var warning, as this
	should (perhaps) start to work somehow ..
	