@@ -1,3 +1,7 @@
+2008-05-27  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* file.h (tino_file_read_allE): pointer changed to void *
+
 2008-05-20  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* Makefile.proto (test): added "make test"
